# capuccino-schedule-extractor

./: .gitignore  main.py  pyproject.toml
notebooks/: main.ipynb  pruebas.ipynb
src/core/: schemas.py
