[project]
name = "capuccino-parser2-0"
version = "2.0.0a"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.1",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.ruff]
include = ['*.py', '*.ipynb']
